# piglet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  release.yml  security.yml
src/: cli.rs  figlet.rs  lib.rs  main.rs
src/animation/: easing.rs  effects.rs  mod.rs  renderer.rs  timeline.rs
src/color/: apply.rs  gradient.rs  mod.rs  palette.rs
src/parser/: color.rs  duration.rs  gradient.rs  mod.rs
src/utils/: ansi.rs  ascii.rs  mod.rs  terminal.rs
tests/: integration_tests.rs
